--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <button onclick='getUsersList();'>RUN MY FUNCTION</button>
+<button onclick='logout();'>LOGOUT</button>
 <table id="UsersTable"></table>
 </body>
 </html>
